# toolset

./: .gitignore  README.md  REUSE.toml  package-lock.json  package.json  pyproject.toml  template.py
.github/workflows/: _library.yml  _release.yml  check.yml  inspect.yml  library.yml  overseer.yml  release.yml  scan.yml
profile/: README.md
scripts/: boilerplate.py  overseer.sh
src/zigdevel/: __init__.py  cmd_init.py  cmd_inspect.py  cmd_libcheck.py  cmd_libinit.py  cmd_lint.py  cmd_list.py  cmd_scan.py  common.py  github.py
tool/: __main__.py  cmd_init.py  cmd_inspect.py
