[project]
name = "zigdevel"
version = "0.1.0"
license = { file = "LICENSES/AGPL-3.0-only.txt" }
description = "Infrastructure of the zig-devel project"
readme = "README.md"
authors = [
    { name = "Nikolay Govorov", email = "me@govorov.online" }
]
requires-python = ">=3.11"
dependencies = [
    "nvchecker>=2.19",
    "plumbum>=1.9.0",
    "requests>=2.32.5",
    "reuse>=6.1.2",
    "rich>=14.2.0",
    "ruff>=0.14.0",
]

[project.urls]
Repository = "https://github.com/zig-devel/toolset"

[project.scripts]
zd = "zigdevel:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
